--- a/Dissertacao_Marcelo_Goncalves/aprovacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/aprovacao.tex
@@ -26,6 +26,8 @@
    Trabalho aprovado. \imprimirlocal, 24 de novembro de 2012:
 
    \assinatura{\textbf{\imprimirorientador} \\ Orientador} 
+   \assinatura{\textbf{\imprimircoorientador} \\Co-orientador}%
+   
    \assinatura{\textbf{Pedro Porfírio Farias} \\ Unifor}
    \assinatura{\textbf{Danielo G Gomes} \\ UFC}
    %\assinatura{\textbf{Professor} \\ Convidado 3}
