--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -397,7 +397,7 @@ Destacam-se ainda outras Heurísticas como Conservadora-Conservadora e
 Otimista-Conservadora, que, na média global, obtiveram resultados não muito acima
 do atingido pela Pessimista-Otimista. A Heurística Pessimista-Pessimista, como
 já mostrado na análise dos gráficos das 
-Figuras~\ref{fig:eficiencia_custo}~e~\ref{fig:eficiencia_execucoes}, apresentou
+Figuras~\ref{fig:eficiencia_custo} e \ref{fig:eficiencia_execucoes}, apresentou
 resultados muito ruins quanto ao custo e ao tempo gastos para completar a Avaliação.
 
 Esses dados consolidados comprovam ainda a grande precisão com que a predição
