--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -233,7 +233,7 @@ linha seguinte, um objeto da classe \emph{DummyExecutor}, que é apenas didátic
 
 A partir da linha 3, vêem-se os passos seguintes da utilização do 
 CloudCapacitor, com a definição de uma Estratégia de Avaliação, configurada
-com uma Heurística de Seleção do tipo OC (v. Seção~\ref{sec:heuristicas}).
+com uma Heurística de Seleção do tipo OC (v. Seção~\ref{subsubsec:heuristicas}).
 A execução da Avaliação de Capacidade acontece de fato na chamada que ocorre
 na linha 8, onde são passados valores que representam uma lista de grandezas de
 Cargas de Trabalho que serão impostas à Aplicação sob Teste rodando sobre as
