Folha de aprovacao corrigida

--- a/Dissertacao_Marcelo_Goncalves/aprovacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/aprovacao.tex
@@ -16,30 +16,33 @@
     \end{center}
     \vspace*{\fill}
     
-    \hspace{.45\textwidth}
-    \begin{minipage}{.5\textwidth}
-        \imprimirpreambulo
-    \end{minipage}%
-    \vspace*{\fill}
-   \end{center}
-        
-   Trabalho aprovado. \imprimirlocal, 24 de novembro de 2012:
+%    \hspace{.45\textwidth}
+%    \begin{minipage}{.5\textwidth}
+%        \imprimirpreambulo
+%    \end{minipage}%
+%    \vspace*{\fill}
+           
+   Data de aprovação: 15 de dezembro de 2014.
 
-   \assinatura{\textbf{\imprimirorientador} \\ Orientador} 
-   \assinatura{\textbf{\imprimircoorientador} \\Co-orientador}%
+   \assinatura{\textbf{\mbox{\imprimirorientador}} \\ (Orientador -- UNIFOR)} 
+   \assinatura{\textbf{\mbox{\imprimircoorientador}} \\(Coorientador -- UNIFOR)}%
    
-   \assinatura{\textbf{Pedro Porfírio Farias} \\ Unifor}
-   \assinatura{\textbf{Danielo G Gomes} \\ UFC}
+   \assinatura{\textbf{\mbox{Prof. Dr. Danielo Gonçalves Gomes}} \\ (Membro -- UFC)}
+    \assinatura{\textbf{\mbox{Prof. Dr. Pedro Porfírio Muniz Farias}} \\ (Membro -- UNIFOR)}
    %\assinatura{\textbf{Professor} \\ Convidado 3}
    %\assinatura{\textbf{Professor} \\ Convidado 4}
       
+      
    \begin{center}
-    \vspace*{0.5cm}
+    \vspace*{\fill}
+    %\vspace*{0.5cm}
     {\large\imprimirlocal}
     \par
     {\large\imprimirdata}
     \vspace*{1cm}
-  \end{center}
+   \end{center}
+   
+   \end{center}
   
 \end{folhadeaprovacao}
 % ---
